--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<h1>Hello!</h1></br>I am coin3x.
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset='utf8'>
+		<title>My profile</title>
+	</head>
+	<body>
+		<h1>Hello!</h1></br>
+		<blockquote>I am coin3x. A student who loves open source.</blockquote>
+	</body>
+</html>
