--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset='utf8'>
+		<meta charset='utf-8'>
 		<title>My profile</title>
 	</head>
 	<body>
-		<h1>Hello!</h1></br>
+		<h1>Hello!</h1><br>
 		<blockquote>I am coin3x. A student who loves open source.</blockquote>
 	</body>
 </html>
