--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html>
 	<head>
 		<meta charset='utf-8'>
+		<link rel="stylesheet" type="text/css" href="index.css">
 		<title>My profile</title>
 	</head>
 	<body>
-		<h1>Hello!</h1><br>
-		<blockquote>I am coin3x. A student who loves open source.</blockquote>
+		<h1 class="Title">Hello!</h1><br>
+		<blockquote>
+			<span class="content">I am coin3x. A student who loves open source.</span>
+		</blockquote>
 	</body>
 </html>
