add language attribute

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="index.css">
 		<title>My profile</title>
 	</head>
-	<body>
+	<body lang="en">
 		<h1 class="Title">Hello!</h1><br>
 		<blockquote>
 			<span class="content">I am coin3x. A student who loves open source.</span>
